# customer_segmentation

./: .gitignore  README.md  analysisi.ipynb  main.py  pyproject.toml
models/: customer_segmentation_features.pkl  customer_segmentation_kmeans_model.pkl  customer_segmentation_scaler.pkl
src/customer_segmentation/: client.py
src/customer_segmentation/api/: main.py
src/customer_segmentation/cli/: main.py
src/customer_segmentation/core/: config.py  schemas.py
src/customer_segmentation/services/: model_service.py
